[tool.poetry]
name = "github"
version = "0.1.0"
description = ""
authors = ["ryo-matsuzaka <matsuzakaryo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
ipython = "^7.29.0"
opencv-python = "^4.5.4"
ninja = "^1.10.2"
yacs = "^0.1.8"
Cython = "^0.29.24"
matplotlib = "^3.5.0"
torch = "^1.1"
jupyterlab = "^3.2.4"
torchvision = "^0.11.1"
pycocotools = "^2.0.2"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
